# self-discover

./: LICENSE  Makefile  README.md  pyproject.toml
evals/: config.toml  iself_discover_eval.py  phased_self_discover_eval.py  self_discover_eval.py
evals/helpers/: __init__.py  config.py  cost.py  dataset.py  eval.py  kafka_consumer.py  kafka_producer.py  llm.py  logger.py
evals/logs/: running_cost.json
evals/logs/llama/phaseI/bbh/: bbh-boolean_expressions.json  bbh-boolean_expressions.txt  bbh-causal_judgement.json  bbh-causal_judgement.txt  bbh-date_understanding.json  bbh-date_understanding.txt  bbh-disambiguation_qa.json  bbh-disambiguation_qa.txt  bbh-dyck_languages.json  bbh-dyck_languages.txt  bbh-formal_fallacies.json  bbh-formal_fallacies.txt  bbh-geometric_shapes.json  bbh-geometric_shapes.txt  bbh-hyperbaton.json  bbh-hyperbaton.txt  bbh-logical_deduction_five_objects.json  bbh-logical_deduction_five_objects.txt  bbh-logical_deduction_seven_objects.json  bbh-logical_deduction_seven_objects.txt  bbh-logical_deduction_three_objects.json  bbh-logical_deduction_three_objects.txt  bbh-movie_recommendation.json  bbh-movie_recommendation.txt  bbh-multistep_arithmetic_two.json  bbh-multistep_arithmetic_two.txt  bbh-navigate.json  bbh-navigate.txt  bbh-object_counting.json  bbh-object_counting.txt  bbh-penguins_in_a_table.json  bbh-penguins_in_a_table.txt  bbh-ruin_names.json  (+21 more)
evals/prompts/: answer_formats.py  task_description.py
notebooks/: execute.ipynb
notebooks/dataset_compilers/mistral/: bbh.ipynb
notebooks/dataset_compilers/self_discover/mistral/: t4d.ipynb
notebooks/evals/: bbh.ipynb
notebooks/evals/llama/: t4d.ipynb
notebooks/evals/self_discover/llama/: bbh.ipynb
notebooks/evals/self_discover/mistral/: bbh.ipynb
notebooks/research/: cost_calc.ipynb  evals.ipynb  phased_self_discover.ipynb  self_discover.ipynb  tokens.ipynb
self_discover/: __init__.py  prompts.py
src/self_discover/: __init__.py  _config.py  _iself_discover.py  _phased_self_discover.py  _self_discover.py  prompts.py
src/self_discover/_helpers/: __init__.py  enums.py  handlers.py  logger.py  validators.py
src/self_discover/_prompts/: _phased_self_discover_prompts.py  _self_discover_prompts.py
tests/: test_self_discover.py
tests/evals/: test_self_discover.py
tests/self_discover/: test__phased_self_discover.py  test__self_discover.py  test_self_discover.py
(+21441 files in other folders)
