[tool.poetry]
name = "self-discover"
version = "0.1.0"
description = "An implementation of the Self-Discover LLM-based reasoning approach introduced in https://arxiv.org/pdf/2402.03620"
authors = ["Sachith Gunasekara"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
langgraph = "^0.2.64"
langchain-core = "^0.3.30"
pyprojroot = "^0.3.0"
langfuse = "^2.57.10"
langchain = "^0.3.14"



[tool.poetry.group.experiments.dependencies]
langchain-mistralai = "^0.2.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
