[tool.poetry]
name = "self-discover"
version = "0.1.0"
description = "An implementation of the Self-Discover LLM-based reasoning approach introduced in https://arxiv.org/pdf/2402.03620"
authors = ["Sachith Gunasekara"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
langgraph = "^0.2.64"
langchain-core = "^0.3.30"
pyprojroot = "^0.3.0"
langchain = "^0.3.14"
loguru = "^0.7.3"
logtail-python = "^0.3.3"
langchain-community = "^0.3.20"

[tool.poetry.group.experiments.dependencies]
langchain-mistralai = "^0.2.4"
langchain-openai = "^0.3.7"
fire = "^0.7.0"
datasets = "^3.2.0"
transformers = "^4.49.0"
langfuse = "^2.57.13"
tomlkit = "^0.13.2"
python-dotenv = "^1.0.1"
kafka-python = "^2.1.5"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
